# giga-data-ingestion

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tool-versions  Dockerfile.prod  Taskfile.yml  catalog-info.yml  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celery-beat-docker-entrypoint.dev.sh  celery-docker-entrypoint.dev.sh  docker-entrypoint.dev.sh  gunicorn.conf.py  main.py  pyproject.toml
api/data_ingestion/: api.py  celery.py  constants.py  db.py  permissions.py  settings.py
api/data_ingestion/cache/: __init__.py  cache.py  keys.py  serde.py
api/data_ingestion/db/: primary.py  trino.py
api/data_ingestion/fixtures/: approval_requests.yaml  qos_school_connectivity.yaml  qos_school_list.yaml  roles.yaml
api/data_ingestion/internal/: auth.py  data_quality_checks.py  email.py  groups.py  roles.py  schema.py  school_registration.py  storage.py  template.py  users.py  utils.py
api/data_ingestion/lib/: auth.py
api/data_ingestion/middlewares/: staticfiles.py
api/data_ingestion/migrations/: env.py  script.py.mako
api/data_ingestion/migrations/versions/: 2024_02_14_0159_788f584b7a1f_initial_migration.py  2024_02_14_0202_d0ecb42fa08e_add_metadata_fields_for_computed_.py  2024_02_21_0148_33b58825535e_add_qos_school_list.py  2024_02_22_0150_53de7b5296ee_add_status_to_school_list.py  2024_02_28_0156_f1daf3173765_remove_headers_enum_from_school_list.py  2024_02_28_0156_f1daf3173765_update_enums.py  2024_02_28_1008_6dc6726fea6d_add_name_field_to_school_list.py  2024_03_08_1242_ba50ac9f577e_update_schoollist_enums.py  2024_03_08_1251_36f37f201554_add_school_connectivity_and_update_school_list_and_file_uploads.py  2024_03_08_1502_ac33970df7f3_add_school_connectivity_and_update_.py  2024_03_11_1535_8bf9cad4ea8a_make_column_to_schema_query_parameters_.py  2024_03_12_0148_c023cbaa712c_add_error_message_field_to_api_.py  2024_03_12_0955_7f77cd6a7420_drop_tables.py  2024_03_12_1052_361ab4c11911_init_file_uploads_qos_school_.py  2024_03_12_1410_3ae4cebfe253_init_db.py  2024_04_02_1134_b69e8a49a86f_add_date_key_and_date_format.py  2024_04_04_0600_48cec6a15e3d_add_file_upload_column_license.py  2024_04_04_0630_81893d769744_add_file_upload_column_license.py  2024_04_04_1217_92088e51ad75_add_file_upload_column_license.py  2024_04_10_0809_fa5a528b0af0_add_date_key_and_date_format.py  2024_04_19_2310_58a38cbd03d0_add_approval_request.py  2024_04_21_1929_07350dc93287_nullable_schema_url.py  2024_04_23_2056_2f90b0e32a2c_ingestion_frequency_to_cron_and_remove_.py  2024_04_28_0923_ebb546ec5bfc_staging_flags.py  2024_04_28_0958_d2d8fbb743bb_full_dq_report_path.py  2024_05_02_1527_46ceba139287_dq_status.py  2024_05_03_0617_344bd96f226c_approval_request_last_approved_by.py  2024_05_07_1749_6bf3cdc59e0f_add_country_qos_field.py  2024_05_07_1853_8014a5974b3c_revise_qos_nullable_fields.py  2024_06_09_1419_abecb3ed9260_add_user_name_fields.py  (+23 more)
api/data_ingestion/mocks/: upload_checks.py
api/data_ingestion/models/: __init__.py  approval_requests.py  base.py  deletion_requests.py  dq_run.py  file_upload.py  ingest_api_qos.py  school_list.py  users.py
api/data_ingestion/permissions/: base.py  permissions.py
api/data_ingestion/routers/: approval_requests.py  auth.py  core.py  delete.py  deletion_requests.py  email.py  error_table.py  groups.py  qos.py  roles.py  schema.py  school_registration.py  upload.py  users.py  utils.py
api/data_ingestion/schemas/: approval_requests.py  common.py  core.py  data_quality_report.py  delete.py  deletion_requests.py  email.py  fuzzy_mismatches.py  group.py  invitation.py  qos.py  schema.py  schema_column.py  school_registration.py  upload.py  user.py  util.py
api/data_ingestion/tasks/: __init__.py  file_upload.py  update_schema.py
api/data_ingestion/trino_models/: schema.py
api/data_ingestion/utils/: data_quality.py  dq_kit_generator.py  fuzzy_matching.py  nocodb.py  schema.py  string.py  upload_impact.py  user.py
api/scripts/: generate_approval_request_fixtures.py  generate_country_dataset_roles.py  generate_qos_fixtures.py  generate_roles_fixtures.py  load_fixtures.py  migrate_blob_metadata.py  roles.json  test_email.py
api/sql/: create_qos_school_list_table.sql.mako
api/tests/: conftest.py  test_approval_requests_by_upload.py  test_core.py  test_error_table.py  test_metadata_path.py  test_upload_impact_preview.py  test_upload_review.py  test_uploads_by_country.py  test_users.py
(+420 files in other folders)
