[tool.poetry]
name = "data-ingestion-backend"
version = "0.3.0"
description = ""
authors = ["Thinking Machines <hello@thinkingmachin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = { extras = ["email"], version = "^2.3.0" }
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"
itsdangerous = "^2.1.2"
loguru = "^0.7.2"
fastapi-azure-auth = "^4.3.0"
python-multipart = "^0.0.6"
msal = "^1.24.1"
azure-storage-blob = "^12.18.3"
msgraph-sdk = "^1.1.0"
msgraph-beta-sdk = "^1.1.0"
orjson = "^3.9.9"
sentry-sdk = { extras = ["fastapi"], version = "^1.40.2" }
country-converter = "^1.2"
azure-communication-email = "^1.0.0"
jinja2 = "^3.1.3"
aiohttp = ">=3.9.2"
cryptography = ">=41.0.6"
python-magic = "^0.4.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.27"
cuid2 = "^2.0.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.1"
icecream = "^2.1.3"
faker = "^23.2.1"
trino = { extras = ["sqlalchemy"], version = "^0.328.0" }
redis = { extras = ["hiredis"], version = "^5.0.3" }
celery = "^5.3.6"
asgiref = "^3.8.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
pytest = "^7.4.2"
ruff = "^0.1.12"
watchdog = "^4.0.0"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
ignore-init-module-imports = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.bandit]
tests = [
    "B324",
    "B501", 'B502', "B503", "B504", "B505", "B506", "B507", "B508", "B509",
    "B602", "B604", "B605", "B606", "B608", "B609"
]
